@@ -1,3 +1,6 @@
+20220708:
+ * various fixes to handle versions (min/max/default)
+
 20220705:
  * fixes for remembered selections
  * added --skip-remembered-selections to "cm run script"
